--- a/views/connect-local.ejs
+++ b/views/connect-local.ejs
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Career Compass">
@@ -21,32 +22,75 @@
     </style>
 </head>
 <body>
+<%if(user.complete == true)
+    $.get('/profile', {}, function (data, status) {
+
+    });
+
+%>
 <div class="container">
 <div class="col-sm-6 col-sm-offset-3">
 
-    <h1><span class="fa fa-user"></span> Add Local Account</h1>
+    <h1><span class="fa fa-user"></span>Complete Your profile</h1>
 
-    <% if (message.length > 0) { %>
-        <div class="alert alert-danger"><%= message %></div>
-    <% } %>
 
     <!-- LOGIN FORM -->
-    <form action="/connect/local" method="post">
+
+
+
+
+
+    <div class="form-group">
+        <label>First name</label>
+        <input type="text" class="form-control" name="fname" id="fname">
+    </div>
+
+    <div class="form-group">
+        <label>Last name</label>
+        <input type="text" class="form-control" name="lname" id="lname">
+    </div>
+
         <div class="form-group">
-            <label>Email</label>
-            <input type="text" class="form-control" name="email">
+            <label>Age</label>
+            <input type="number" class="form-control" name="age" id="age">
         </div>
         <div class="form-group">
-            <label>Password</label>
-            <input type="password" class="form-control" name="password">
+            <label>Address</label>
+            <input type="text" class="form-control" name="Address" id="address">
         </div>
 
-        <button type="submit" class="btn btn-warning btn-lg">Add Local</button>
-    </form>
+        <button type="submit" class="btn btn-warning btn-lg" id="S">Submit</button>
+
 
     <hr>
 
-    <p><a href="/profile">Go back to profile</a></p>
+<script>
+
+    $(function () {
+
+        $('#S').click(function () {
+
+
+
+            $.post('/complete', {
+                Age : $('#age').val(),
+                Address : $('#address').val(),
+                first_name : $('#fname').val(),
+                last_name : $('#lname').val()
+            }, function (data, status) {
+
+                $.get('/profile');
+
+
+            });
+
+        });
+
+
+
+    });
+
+</script>
 
 
 </div>
