--- a/views/login.ejs
+++ b/views/login.ejs
@@ -33,7 +33,7 @@
     <!-- LOGIN FORM -->
     <form action="/login" method="post">
         <div class="form-group">
-            <label>Email</label>
+            <label>Username</label>
             <input type="text" class="form-control" name="email">
         </div>
         <div class="form-group">
@@ -48,6 +48,7 @@
 
     <p>Need an account? <a href="/signup">Signup</a></p>
     <p>Or go <a href="/">home</a>.</p>
+
 
 
 </div>
