--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -50,6 +50,21 @@
 
 
 
+    <div class="container">
+
+        <div class="jumbotron text-center">
+            <h1>
+                <span class="fa fa-lock"></span>
+            </h1>
+
+            <p>Sign up with</p>
+            <a href="/auth/google" class="btn btn-danger"><span class="fa fa-google-plus"></span> Google+</a>
+        </div>
+
+
+    </div>
+
+
 </div>
 </div>
 </body>
