--- a/views/connect-local.ejs
+++ b/views/connect-local.ejs
@@ -22,12 +22,23 @@
     </style>
 </head>
 <body>
-<%if(user.complete == true)
-    $.get('/profile', {}, function (data, status) {
 
-    });
+<%if(user.complete){
+
+    %>
+
+<script>
+
+    window.location.href = "/profile";
+
+</script>
+
+
+<%
+}
 
 %>
+
 <div class="container">
 <div class="col-sm-6 col-sm-offset-3">
 
@@ -70,7 +81,7 @@
 
         $('#S').click(function () {
 
-
+            console.log("Hello");
 
             $.post('/complete', {
                 Age : $('#age').val(),
@@ -78,8 +89,8 @@
                 first_name : $('#fname').val(),
                 last_name : $('#lname').val()
             }, function (data, status) {
-
-                $.get('/profile');
+                console.log("Data");
+                window.location.href = "/profile";
 
 
             });
