--- a/views/login.ejs
+++ b/views/login.ejs
@@ -46,6 +46,24 @@
 
     <hr>
 
+
+
+
+    <div class="container">
+
+        <div class="jumbotron text-center">
+            <h1>
+                <span class="fa fa-lock"></span>
+            </h1>
+
+            <p>Sign up with</p>
+            <a href="/auth/google" class="btn btn-danger"><span class="fa fa-google-plus"></span> Google+</a>
+        </div>
+
+
+    </div>
+
+
     <p>Need an account? <a href="/signup">Signup</a></p>
     <p>Or go <a href="/">home</a>.</p>
 
